--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@react-spring/web": "^9.7.5",
     "axios": "^1.7.9",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^11.18.2",
     "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "ogl": "^1.0.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "three": "^0.173.0"
   },
   "devDependencies": {
