--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@react-spring/web": "^9.7.5",
+    "@types/react-icons": "^3.0.0",
     "axios": "^1.7.9",
     "framer-motion": "^11.18.2",
     "next": "15.1.7",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "three": "^0.173.0"
   },
   "devDependencies": {
