--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@react-spring/web": "^9.7.5",
     "@types/react-icons": "^3.0.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.511.0",
     "next": "15.1.7",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0"
   },
   "devDependencies": {
